--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^6.1.0",
+    "elasticsearch": "^15.2.0",
     "joi": "^14.0.4",
     "knex": "^0.14.6",
     "moment": "^2.22.2",
