--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "knex": "^0.14.6",
     "moment": "^2.22.2",
     "ora": "^3.0.0",
+    "node-schedule": "^1.3.0",
     "oracledb": "github:oracle/node-oracledb#v2.0.15"
   },
   "devDependencies": {
